--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
+    <h1 class="sr-only">Frontend Mentor | NFT preview card component</h1>
     <main>
       <div class="nft-cube">
         <img
@@ -47,7 +48,12 @@
       </div>
       <hr />
       <div class="profile">
-        <img src="images/image-avatar.png" alt="" width="132" height="132" />
+        <img
+          src="images/image-avatar.png"
+          alt="Jules Wyvern's profile picture"
+          width="132"
+          height="132"
+        />
         <p>Creation of <a href="">Jules Wyvern</a></p>
       </div>
     </main>
